# candigv2-logging

./: README.md  pyproject.toml  requirements.txt
src/candigv2_logging/: logging.py
