[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "v1.0.0"
name = "candigv2_logging"
dependencies = [
    "requests>=2.25.1",
    "pytest>=7.2.0",
    "PyJWT>=2.6.0",
    "cryptography>=3.4.0"
    ]
requires-python = ">= 3.9"
description = "Common logging methods for CanDIGv2"
readme = "README.md"

[project.urls]
Repository = "https://github.com/CanDIG/candigv2-logging"
